--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1996,3 +1996,162 @@ body .section07 .bx-pager-link span + span {
     position: absolute;
     width: 100%;
 }
+
+.community {
+    background: url(../images/main/bg05.jpg) no-repeat;
+    background-size: cover;
+}
+
+.community .community-container {
+    width: 1538px;
+    margin: 0 auto;
+}
+
+.community .community-container h1 {
+    text-align: center;
+    font-size: 36px;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 85px;
+}
+
+.community .community-container > div {
+    float: left;
+    height: 471px;
+}
+
+.community .online {
+    width: 718px;
+    margin-right: 29px;
+    background: url(../images/main/section05_img01.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.community .online a {
+    width: 100%;
+    height: 100%;
+    padding: 135px 70px 0;
+    box-sizing: border-box;
+    display: block;
+}
+
+.community .online a {
+    color: #fff;
+}
+
+.community .online h2 {
+    font-size: 34px;
+    font-weight: 500;
+    margin-bottom: 28px;
+}
+
+.community .online h3 {
+    font-size: 33px;
+    line-height: 1.3;
+    margin-bottom: 65px;
+}
+
+.community .online p {
+    font-size: 18px;
+}
+
+.community .etc {
+    width: 791px;
+}
+
+.community .etc > * {
+    float: left;
+    height: 100%;
+}
+
+.community .etc .reserve {
+    width: 380px;
+    margin-right: 30px;
+    background: #fff;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.community .etc .reserve a {
+    padding-top: 159px;
+    width: 100%;
+    height: 100%;
+    display: block;
+    box-sizing: border-box;
+}
+
+.community .etc .reserve h2 {
+    font-size: 29px;
+    color: #222;
+    font-weight: 500;
+    margin-bottom: 94px;
+    position: relative;
+}
+
+.community .etc .reserve h2:before {
+    position: absolute;
+    width: 35px;
+    height: 6px;
+    bottom: -49px;
+    display: block;
+    background: #ed6706;
+    content: '';
+    left: 50%;
+    margin-left: -17.5px;
+}
+
+.community .etc .reserve p {
+    font-size: 17px;
+    color: #0f0f0f;
+    line-height: 1.3;
+}
+
+.community .etc ul {
+    width: 380px;
+}
+
+.community .etc ul li:first-child {
+    margin-bottom: 21px;
+}
+
+.community .etc ul li {
+    height: 225px;
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #fff;
+    transition: all .3s ease;
+}
+
+.community .etc ul li:hover {
+    background: #ed6907;
+    border: 2px solid #ed6907;
+}
+
+.community .etc ul li a {
+    width: 100%;
+    height: 100%;
+    padding: 42px 44px 0;
+    box-sizing: border-box;
+    display: block;
+}
+
+.community .etc ul li h2 {
+    font-size: 24px;
+    color: #fff;
+    font-weight: 500;
+    margin-bottom: 19px;
+}
+
+.community .etc ul li p {
+    font-size: 16px;
+    line-height: 1.5;
+    color: #fff;
+    margin-bottom: 45px;
+}
+
+.community .etc ul li span {
+    background: url(../images/main/arrow_right_rrrr.png);
+    display: block;
+    width: 33px;
+    height: 18px;
+}
