기능 수정: 푸터 스크롤 추가

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2206,3 +2206,13 @@ body .section07 .bx-pager-link span + span {
 .section04 .text {
     padding-top: 180px;
 }
+
+.footer-info-container, .footer-info-container .fp-tableCell {
+    height: 411px !important;
+    display: block !important;
+}
+
+.footer, .footer .fp-tableCell  {
+    height: 99px !important;
+    display: block !important;
+}
