--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -811,6 +811,7 @@ body .section07 .bx-pager-link span + span {
 
 .section09 {
     background: url(../images/main/bg06.jpg) no-repeat;
+    background-size: cover;
 }
 
 .section09 h4 {
@@ -1801,7 +1802,8 @@ body .section07 .bx-pager-link span + span {
     bottom: 0;
     width: 100%;
     height: 320px;
-    background: url(../images/main/bg01.jpg) no-repeat
+    background: url(../images/main/bg01.jpg) no-repeat;
+    background-size: cover;
 }
 
 .section02 .max-layout-width {
@@ -1818,6 +1820,7 @@ body .section07 .bx-pager-link span + span {
 .section04 {
     background: url(../images/main/bg02.jpg) no-repeat;
     background-position-y: 80px;
+    background-size: cover;
 }
 
 .section05 .section-title-color {
@@ -1876,8 +1879,9 @@ body .section07 .bx-pager-link span + span {
 }
 
 .case {
-    background: url(../images/main/bg04.jpg);
+    background: url(../images/main/bg04.jpg) no-repeat;
     box-sizing: border-box;
+    background-size: cover;
 }
 
 .case h2 {
