--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -286,8 +286,8 @@ section {
 }
 
 .image-container h5 span {
-    font-family: ramaraja !important;
-    font-size: 60px;
+    font-family: gemarket !important;
+    font-size: 42px;
 }
 
 .image-container p {
