--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -100,14 +100,14 @@
 .title {
     font-size: 36px;
     color: #222;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
     letter-spacing: -0.2px;
-    font-family: KCC !important;
+    font-family: ink !important;
 }
 
 .title span {
     color: #9c8c7f;
-    font-family: KCC !important;
+    font-family: ink !important;
 }
 
 .text-dec {
