--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -499,11 +499,11 @@
 }
 
 .text-slider .slick-slide .text h3 {
-    font-size: 89px;
+    font-size: 79px;
     font-weight: bold;
     color: #e4e4e4;
     margin-bottom: -3px;
-    font-family: ramaraja !important;
+    font-family: gmarket !important;
 }
 
 .text-slider .slick-slide .text p {
