--- a/src/main/webapp/css/implant/navigationImplants.css
+++ b/src/main/webapp/css/implant/navigationImplants.css
@@ -324,18 +324,26 @@
 }
 
 .section04 {
+    background: url(../../images/sub/implant/navigation/navi_bg.jpg)  no-repeat center;
     margin-top: 146px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .section04 .section-title {
     line-height: 1.25;
     margin-bottom: 12px;
+    color: #fff;
+}
+
+.section04 .section-title .section-title-color {
+    color: #fff;
 }
 
 .section04 .section-text {
     line-height: 1.6;
     margin-bottom: 91px;
-    color: #666;
+    color: #fff;
 }
 
 .section04 .image_box_right {
@@ -343,6 +351,7 @@
     height: 435px;
     width: 51.52%;
     z-index: 1;
+    top: 170px;
 }
 
 .section04 .img {
@@ -350,7 +359,6 @@
 }
 
 .section04 .bg {
-    background: #f5f5f5;
     width: 100%;
     position: absolute;
     height: 319px;
@@ -373,6 +381,7 @@
     font-weight: 500;
     cursor: pointer;
     letter-spacing: -1px;
+    color: #fff;
 }
 
 .section04 .pager span {
@@ -384,7 +393,7 @@
     content: '';
     width: 100%;
     height: 2px;
-    background: #111;
+    background: #fff;
     position: absolute;
     bottom: 0px;
     left: 0;
@@ -396,6 +405,7 @@
     font-weight: bold;
     font-size: 20px;
     top: 7px;
+    background: url(../../images/sub/implant/navigation/white_check.png) no-repeat;
 }
 
 .section05 .img {
@@ -555,9 +565,9 @@
     padding-top: 0px;
     padding-bottom: 37px;
 }
-    
 
-  section.board-link {
+
+section.board-link {
     margin-top: 125px;
 }
 
