--- a/src/main/webapp/css/implant/navigationImplants.css
+++ b/src/main/webapp/css/implant/navigationImplants.css
@@ -67,7 +67,7 @@
 }
 
 .section05 {
-    margin-top: 171px;
+    margin-top: 128px;
 }
 
 .section05 .max-layout-width .text > div {
@@ -187,7 +187,7 @@
 }
 
 .section02 {
-    margin-top: 110px;
+    margin-top: 115px;
     margin-bottom: 110px;
 }
 
@@ -329,15 +329,16 @@
 
 .section04 {
     background: url(../../images/sub/implant/navigation/navi_bg.jpg)  no-repeat center;
-    margin-top: 146px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    margin-top: 119px;
+    padding-top: 128px;
+    padding-bottom: 109px;
 }
 
 .section04 .section-title {
     line-height: 1.25;
     margin-bottom: 12px;
     color: #fff;
+    margin-left: 37px;
 }
 
 .section04 .section-title .section-title-color {
@@ -346,8 +347,10 @@
 
 .section04 .section-text {
     line-height: 1.6;
-    margin-bottom: 91px;
+    margin-bottom: 63px;
     color: #fff;
+    font-weight: 300;
+    margin-left: 38px;
 }
 
 .section04 .image_box_left {
@@ -355,7 +358,7 @@
     height: 435px;
     width: 51.52%;
     z-index: 1;
-    top: 170px;
+    top: 157px;
 }
 
 .section04 .img {
@@ -386,7 +389,7 @@
     position: relative;
     padding-left: 40px;
     display: inline-block;
-    font-weight: 500;
+    font-weight: 400;
     cursor: pointer;
     letter-spacing: -1px;
     color: #fff;
@@ -568,10 +571,10 @@
 }
 
 .left-fade-slider-container {
-    margin-top: 221px;
+    margin-top: 230px;
     background: #fff;
     padding-top: 0px;
-    padding-bottom: 37px;
+    padding-bottom: 28px;
 }
 
 
